--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body { margin: 0; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', sans-serif; }
@@ -19,7 +18,63 @@
 
     <script type="text/babel">
         const { useState, useEffect } = React;
-        const { ChevronRight, RotateCcw, BookOpen, Target, Trophy, CheckCircle, XCircle } = lucide;
+
+        // 아이콘 컴포넌트들 (SVG로 직접 구현)
+        const ChevronRight = () => (
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round">
+                <polyline points="9,18 15,12 9,6"></polyline>
+            </svg>
+        );
+
+        const RotateCcw = () => (
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round">
+                <polyline points="1,4 1,10 7,10"></polyline>
+                <path d="M3.51,15a9,9,0,0,0,14.85-3.36c.23-1.29.21-2.64-.08-3.9a9,9,0,0,0-16.35-4.9L1,10"></path>
+            </svg>
+        );
+
+        const BookOpen = () => (
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round">
+                <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path>
+                <path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path>
+            </svg>
+        );
+
+        const Target = () => (
+            <svg width="64" height="64" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round">
+                <circle cx="12" cy="12" r="10"></circle>
+                <circle cx="12" cy="12" r="6"></circle>
+                <circle cx="12" cy="12" r="2"></circle>
+            </svg>
+        );
+
+        const Trophy = () => (
+            <svg width="64" height="64" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round">
+                <line x1="8" y1="21" x2="16" y2="21"></line>
+                <line x1="12" y1="17" x2="12" y2="21"></line>
+                <path d="M7 4V2a1 1 0 0 1 1-1h8a1 1 0 0 1 1 1v2"></path>
+                <path d="M7 4h10l-1 7H8l-1-7Z"></path>
+                <path d="M9 9v1"></path>
+                <path d="M15 9v1"></path>
+                <path d="M5 9a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h1"></path>
+                <path d="M19 9a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2h-1"></path>
+            </svg>
+        );
+
+        const CheckCircle = () => (
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round">
+                <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path>
+                <polyline points="22,4 12,14.01 9,11.01"></polyline>
+            </svg>
+        );
+
+        const XCircle = () => (
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round">
+                <circle cx="12" cy="12" r="10"></circle>
+                <line x1="15" y1="9" x2="9" y2="15"></line>
+                <line x1="9" y1="9" x2="15" y2="15"></line>
+            </svg>
+        );
 
         const VocabQuizApp = () => {
             const [currentScreen, setCurrentScreen] = useState('home');
@@ -217,7 +272,7 @@
                     <div className="bg-white shadow-sm px-6 py-4">
                         <div className="flex items-center space-x-3">
                             <div className="bg-blue-500 p-2 rounded-lg">
-                                <BookOpen className="w-6 h-6 text-white" />
+                                <BookOpen />
                             </div>
                             <div>
                                 <h1 className="text-xl font-bold text-gray-900">Vocab Quiz</h1>
@@ -229,7 +284,9 @@
                     <div className="flex-1 flex flex-col justify-center px-6 py-8">
                         <div className="text-center mb-8">
                             <div className="bg-white p-8 rounded-2xl shadow-lg mb-6">
-                                <Target className="w-16 h-16 text-blue-500 mx-auto mb-4" />
+                                <div className="text-blue-500 mx-auto mb-4">
+                                    <Target />
+                                </div>
                                 <h2 className="text-2xl font-bold text-gray-900 mb-2">어휘 실력을 테스트해보세요!</h2>
                                 <p className="text-gray-600">정의를 보고 올바른 단어를 선택하는 퀴즈입니다.</p>
                             </div>
@@ -256,7 +313,7 @@
                             ) : (
                                 <>
                                     <span>퀴즈 시작하기</span>
-                                    <ChevronRight className="w-5 h-5" />
+                                    <ChevronRight />
                                 </>
                             )}
                         </button>
@@ -333,10 +390,10 @@
                                             <div className="flex items-center justify-between">
                                                 <span>{option}</span>
                                                 {showResult && option === current.correctAnswer && (
-                                                    <CheckCircle className="w-5 h-5 text-green-600" />
+                                                    <CheckCircle />
                                                 )}
                                                 {showResult && option === selectedAnswer && option !== current.correctAnswer && (
-                                                    <XCircle className="w-5 h-5 text-red-600" />
+                                                    <XCircle />
                                                 )}
                                             </div>
                                         </button>
@@ -351,7 +408,7 @@
                                         className="w-full bg-blue-500 text-white py-4 rounded-xl font-semibold text-lg shadow-lg active:bg-blue-600 transition-colors flex items-center justify-center space-x-2"
                                     >
                                         <span>{currentQuestion < totalQuestions - 1 ? '다음 문제' : '결과 보기'}</span>
-                                        <ChevronRight className="w-5 h-5" />
+                                        <ChevronRight />
                                     </button>
                                 </div>
                             )}
@@ -389,7 +446,9 @@
                         <div className="flex-1 flex flex-col justify-center px-6 py-8">
                             <div className="text-center">
                                 <div className="bg-white p-8 rounded-2xl shadow-lg mb-6">
-                                    <Trophy className="w-16 h-16 text-yellow-500 mx-auto mb-4" />
+                                    <div className="text-yellow-500 mx-auto mb-4">
+                                        <Trophy />
+                                    </div>
                                     <h2 className="text-3xl font-bold text-gray-900 mb-2">{score} / {totalQuestions}</h2>
                                     <div className="text-2xl font-semibold mb-2">{percentage}%</div>
                                     <div className={`text-lg font-medium ${gradeColor} mb-4`}>{grade}</div>
@@ -411,7 +470,7 @@
                                         onClick={startQuiz}
                                         className="w-full bg-blue-500 text-white py-4 rounded-xl font-semibold text-lg shadow-lg active:bg-blue-600 transition-colors flex items-center justify-center space-x-2"
                                     >
-                                        <RotateCcw className="w-5 h-5" />
+                                        <RotateCcw />
                                         <span>다시 도전하기</span>
                                     </button>
                                     
@@ -437,7 +496,9 @@
             );
         };
 
-        ReactDOM.render(<VocabQuizApp />, document.getElementById('root'));
+        // React 18의 새로운 방식으로 렌더링
+        const root = ReactDOM.createRoot(document.getElementById('root'));
+        root.render(<VocabQuizApp />);
     </script>
 </body>
 </html>
